# RobotControlCenterBackend

./: .coderabbit.yaml  .gitignore  App.cpp  App.h  CMakeLists.txt  DatabaseManager.cpp  DatabaseManager.h  Session.cpp  Session.h  main.cpp
DatabaseRelated/: DatabaseDAO.cpp  DatabaseDAO.h  DatabaseManager.cpp  DatabaseManager.h  RobotConnectionListener.cpp  RobotConnectionListener.h
FrontendRelated/: FrontendConnectionListener.cpp  FrontendConnectionListener.h  FrontendManager.cpp  FrontendManager.h
Message_processing/: DataParser.cpp  DataParser.h  MessageStructs.h
Robots/: Robot.cpp  Robot.h  RobotConnectionListener.cpp  RobotConnectionListener.h  RobotManager.cpp  RobotManager.h
Validations/: DataValidations.cpp  DataValidations.h
